src/App.css
html, body {
  color: #11001c;
  background-color: #F7F6F9;
  min-height: 400px;
  margin-bottom: 100px;
  padding: 0;
  
}

.jumbotron {
  margin-top: 50px;
}
.container {
  width: auto;
  max-width: 960px;
}

p a {
  color: purple!important;
  
}
p a:hover {
  text-decoration: none;
  text-shadow: 0 0 .65px #333, 0 0 .65px #333;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

